--- a/index.ipynb
+++ b/index.ipynb
@@ -201,9 +201,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Ride object at 0x7f8384295b00>\n",
+      "<__main__.Ride object at 0x7f8384295f28>\n",
+      "<__main__.Ride object at 0x7f8384295ef0>\n"
+     ]
+    }
+   ],
    "source": [
     "second_ride = Ride()\n",
     "third_ride = Ride()\n",
